--- a/backend/views/user/wishlist.ejs
+++ b/backend/views/user/wishlist.ejs
@@ -1094,7 +1094,7 @@
         <div class="footer-column footer-menu mb-4 mb-lg-0">
           <h6 class="sub-menu__title text-uppercase">Help</h6>
           <ul class="sub-menu__list list-unstyled">
-            <li class="sub-menu__item"><a href="tel:+911234567890" class="menu-link menu-link_us-s">Customer Service</a></li>
+               <li class="sub-menu__item"><a href="/return_policy" class="menu-link menu-link_us-s">Return & Refund Policy</a></li>
             <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
             <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
             <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
