--- a/backend/views/user/store.ejs
+++ b/backend/views/user/store.ejs
@@ -612,7 +612,178 @@
           </div>
         </div><!-- /.shop-acs -->
       </div><!-- /.d-flex justify-content-between -->
+  <div class="aside-filters aside aside_right" id="shopFilter">
+    <div class="aside-header d-flex align-items-center">
+      <h3 class="text-uppercase fs-6 mb-0">Filter By</h3>
+      <button class="btn-close-lg js-close-aside btn-close-aside ms-auto"></button>
+    </div><!-- /.aside-header -->
 
+    <div class="aside-content">
+      <div class="accordion" id="categories-list">
+        <div class="accordion-item mb-4">
+          <h5 class="accordion-header" id="accordion-heading-1">
+            <button class="accordion-button p-0 border-0 fs-5 text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-filter-1" aria-expanded="true" aria-controls="accordion-filter-1">
+              Product Categories
+              <svg class="accordion-button__icon type2" viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg">
+                <g aria-hidden="true" stroke="none" fill-rule="evenodd">
+                  <path d="M5.35668 0.159286C5.16235 -0.053094 4.83769 -0.0530941 4.64287 0.159286L0.147611 5.05963C-0.0492049 5.27473 -0.049205 5.62357 0.147611 5.83813C0.344427 6.05323 0.664108 6.05323 0.860924 5.83813L5 1.32706L9.13858 5.83867C9.33589 6.05378 9.65507 6.05378 9.85239 5.83867C10.0492 5.62357 10.0492 5.27473 9.85239 5.06018L5.35668 0.159286Z"/>
+                </g>
+              </svg>
+            </button>
+          </h5>
+          <div id="accordion-filter-1" class="accordion-collapse collapse show border-0" aria-labelledby="accordion-heading-1" data-bs-parent="#categories-list">
+            <div class="accordion-body px-0 pb-0">
+              <ul class="list list-inline row row-cols-2 mb-0">
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Tshirt</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Shirt</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Sweatshirts</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Swimwear</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Jackets</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">T-Shirts & Tops</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Jeans</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Trousers</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Men</a>
+                </li>
+                <li class="list-item">
+                  <a href="#" class="menu-link py-1">Jumpers & Cardigans</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div><!-- /.accordion-item -->
+      </div><!-- /.accordion-item -->
+
+      <div class="accordion" id="color-filters">
+        <div class="accordion-item mb-4">
+          <h5 class="accordion-header" id="accordion-heading-11">
+            <button class="accordion-button p-0 border-0 fs-5 text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-filter-2" aria-expanded="true" aria-controls="accordion-filter-2">
+              Color
+              <svg class="accordion-button__icon type2" viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg">
+                <g aria-hidden="true" stroke="none" fill-rule="evenodd">
+                  <path d="M5.35668 0.159286C5.16235 -0.053094 4.83769 -0.0530941 4.64287 0.159286L0.147611 5.05963C-0.0492049 5.27473 -0.049205 5.62357 0.147611 5.83813C0.344427 6.05323 0.664108 6.05323 0.860924 5.83813L5 1.32706L9.13858 5.83867C9.33589 6.05378 9.65507 6.05378 9.85239 5.83867C10.0492 5.62357 10.0492 5.27473 9.85239 5.06018L5.35668 0.159286Z"/>
+                </g>
+              </svg>
+            </button>
+          </h5>
+          <div id="accordion-filter-2" class="accordion-collapse collapse show border-0" aria-labelledby="accordion-heading-11" data-bs-parent="#color-filters">
+            <div class="accordion-body px-0 pb-0">
+              <div class="d-flex flex-wrap">
+                <a href="#" class="swatch-color js-filter" style="color: #0a2472"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #d7bb4f"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #282828"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #b1d6e8"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #9c7539"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #d29b48"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #e6ae95"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #d76b67"></a>
+                <a href="#" class="swatch-color swatch_active js-filter" style="color: #bababa"></a>
+                <a href="#" class="swatch-color js-filter" style="color: #bfdcc4"></a>
+              </div>
+            </div>
+          </div>
+        </div><!-- /.accordion-item -->
+      </div><!-- /.accordion -->
+
+
+      <div class="accordion" id="size-filters">
+        <div class="accordion-item mb-4">
+          <h5 class="accordion-header" id="accordion-heading-size">
+            <button class="accordion-button p-0 border-0 fs-5 text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-filter-size" aria-expanded="true" aria-controls="accordion-filter-size">
+              Sizes
+              <svg class="accordion-button__icon type2" viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg">
+                <g aria-hidden="true" stroke="none" fill-rule="evenodd">
+                  <path d="M5.35668 0.159286C5.16235 -0.053094 4.83769 -0.0530941 4.64287 0.159286L0.147611 5.05963C-0.0492049 5.27473 -0.049205 5.62357 0.147611 5.83813C0.344427 6.05323 0.664108 6.05323 0.860924 5.83813L5 1.32706L9.13858 5.83867C9.33589 6.05378 9.65507 6.05378 9.85239 5.83867C10.0492 5.62357 10.0492 5.27473 9.85239 5.06018L5.35668 0.159286Z"/>
+                </g>
+              </svg>
+            </button>
+          </h5>
+          <div id="accordion-filter-size" class="accordion-collapse collapse show border-0" aria-labelledby="accordion-heading-size" data-bs-parent="#size-filters">
+            <div class="accordion-body px-0 pb-0">
+              <div class="d-flex flex-wrap">
+                <a href="#" class="swatch-size btn btn-sm btn-outline-light mb-3 me-3 js-filter">XS</a>
+                <a href="#" class="swatch-size btn btn-sm btn-outline-light mb-3 me-3 js-filter">S</a>
+                <a href="#" class="swatch-size btn btn-sm btn-outline-light mb-3 me-3 js-filter">M</a>
+                <a href="#" class="swatch-size btn btn-sm btn-outline-light mb-3 me-3 js-filter">L</a>
+                <a href="#" class="swatch-size btn btn-sm btn-outline-light mb-3 me-3 js-filter">XL</a>
+                <a href="#" class="swatch-size btn btn-sm btn-outline-light mb-3 me-3 js-filter">XXL</a>
+              </div>
+            </div>
+          </div>
+        </div><!-- /.accordion-item -->
+      </div><!-- /.accordion -->
+
+
+
+
+
+      <div class="accordion" id="price-filters">
+        <div class="accordion-item mb-4">
+          <h5 class="accordion-header mb-2" id="accordion-heading-price">
+            <button class="accordion-button p-0 border-0 fs-5 text-uppercase" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-filter-price" aria-expanded="true" aria-controls="accordion-filter-price">
+              Price
+              <svg class="accordion-button__icon type2" viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg">
+                <g aria-hidden="true" stroke="none" fill-rule="evenodd">
+                  <path d="M5.35668 0.159286C5.16235 -0.053094 4.83769 -0.0530941 4.64287 0.159286L0.147611 5.05963C-0.0492049 5.27473 -0.049205 5.62357 0.147611 5.83813C0.344427 6.05323 0.664108 6.05323 0.860924 5.83813L5 1.32706L9.13858 5.83867C9.33589 6.05378 9.65507 6.05378 9.85239 5.83867C10.0492 5.62357 10.0492 5.27473 9.85239 5.06018L5.35668 0.159286Z"/>
+                </g>
+              </svg>
+            </button>
+          </h5>
+          <div id="accordion-filter-price" class="accordion-collapse collapse show border-0" aria-labelledby="accordion-heading-price" data-bs-parent="#price-filters">
+            <input class="price-range-slider" type="text" name="price_range" value="" data-slider-min="10" data-slider-max="1000" data-slider-step="5" data-slider-value="[250,450]" data-currency="₹">
+            <div class="price-range__info d-flex align-items-center mt-2">
+              <div class="me-auto">
+                <span class="text-secondary">Min Price: </span>
+                <span class="price-range__min">₹250</span>
+              </div>
+              <div>
+                <span class="text-secondary">Max Price: </span>
+                <span class="price-range__max">₹450</span>
+              </div>
+            </div>
+          </div>
+        </div><!-- /.accordion-item -->
+      </div><!-- /.accordion -->
+
+      <div class="filter-active-tags pt-2">
+        <button class="filter-tag d-inline-flex align-items-center mb-3 me-3 text-uppercase js-filter">
+          <i class="btn-close-xs d-inline-block"></i>
+          <span class="ms-2">Blues</span>
+        </button>
+        <button class="filter-tag d-inline-flex align-items-center mb-3 me-3 text-uppercase js-filter">
+          <i class="btn-close-xs d-inline-block"></i>
+          <span class="ms-2">Max Price: ₹493</span>
+        </button>
+        <button class="filter-tag d-inline-flex align-items-center mb-3 text-uppercase js-filter">
+          <i class="btn-close-xs d-inline-block"></i>
+          <span class="ms-2">Zara</span>
+        </button>
+
+        <div>
+          <button class="filter-tag d-flex align-items-center text-uppercase js-filter">
+            <i class="btn-close-xs d-inline-block"></i>
+            <span class="ms-2">RESET FILTER</span>
+          </button>
+        </div>
+      </div>
+    </div><!-- /.aside-content -->
+  </div><!-- /.aside-filters aside aside_right overflow-auto -->
       <div class="products-grid row row-cols-2 row-cols-md-3 row-cols-lg-4" id="products-grid">
         <% if (Array.isArray(products) && products.length > 0) { %>
           <% products.forEach(function(product) {
