--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -278,7 +278,9 @@
         <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <use href="#icon_cart" />
         </svg>
-        <span class="cart-amount d-block position-absolute js-cart-items-count">3</span>
+      <span class="cart-amount d-block position-absolute js-cart-items-count">
+            <%= cartItems.length > 0 ? cartItems.reduce((total, item) => total + item.quantity, 0) : 0 %>
+          </span>
       </a>
     </div><!-- /.container -->
 
