--- a/backend/views/user/login.ejs
+++ b/backend/views/user/login.ejs
@@ -274,7 +274,7 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <use href="#icon_cart" />
                 </svg>
-                <span class="cart-amount d-block position-absolute js-cart-items-count">3</span>
+              
             </a>
         </div><!-- /.container -->
 
@@ -496,7 +496,7 @@
 
         <a href="/cart" class="header-tools__item header-tools__cart " >
           <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_cart" /></svg>
-          <span class="cart-amount d-block position-absolute js-cart-items-count">3</span>
+
         </a>
       </div><!-- /.header__tools -->
     </div><!-- /.header-desk header-desk_type_2 -->
@@ -522,7 +522,7 @@
                                 </li>
                             </ul>
                             <p class="text-center" style="font-size:1.08rem; font-weight:500;">
-                                <span style="color:#4285F4;">Sign in instantly</span> with your Google account
+                                <span >Sign in instantly</span> with your Google account
                             </p>
                             <div class="social-icons social-icon-border-color d-flex justify-content-center mb-3">
                                 <a href="#" class="social-icon social-google"
