--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -24840,8 +24840,6 @@ body.coming-soon-page .header {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  border-bottom-left-radius: 16px;
-  border-bottom-right-radius: 16px;
   pointer-events: none;
 }
 .pc__img-overlay-bottom .pc__title {
@@ -24849,8 +24847,7 @@ body.coming-soon-page .header {
   font-weight: 700;
   margin-bottom: 0.12rem;
   margin-top: 0.1rem;
-  line-height: 1.25;
-  min-height: 2.2em;
+  /* min-height: 2.2em; */
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -24896,8 +24893,9 @@ body.coming-soon-page .header {
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  min-height: 100px;
+  align-items: center;
+  justify-content: center;
+  /* min-height: 100px; */
 }
 .product-card .product-card__price {
   font-size: 1.05rem;
