--- a/backend/views/user/account.ejs
+++ b/backend/views/user/account.ejs
@@ -508,7 +508,7 @@
                     </svg>
                 </a>
 
-                <a href="cart.html" class="header-tools__item header-tools__cart " data-aside="cartDrawer">
+                <a href="/cart" class="header-tools__item header-tools__cart " data-aside="cartDrawer">
                     <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <use href="#icon_cart" />
