--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -20199,7 +20199,9 @@ textarea.form-control.is-invalid {
   z-index: 1;
   outline: none;
 }
-
+.store-card{
+  padding: 0;
+}
 .products-carousel__prev svg,
 .products-carousel__next svg {
   color: #767676;
@@ -20314,7 +20316,17 @@ textarea.form-control.is-invalid {
     padding: 3px;
   }
 }
+@media (max-width: 507px) {
+  .product-card .product-card__price {
+ gap: 0!important;
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ font-size: 15px!important;
 
+  }
+
+}
 .service-promotion__icon .flaticon {
   font-size: 3.25rem;
 }
@@ -24902,7 +24914,7 @@ body.coming-soon-page .header {
 .product-card .product-card__price {
   font-size: 1.05rem;
   font-weight: 600;
-  margin-bottom: 0.3rem;
+margin-top: -1rem;
   gap: 0.5rem;
 }
 .product-card .price-old {
