address added on footer

--- a/backend/views/user/privacy.ejs
+++ b/backend/views/user/privacy.ejs
@@ -908,7 +908,8 @@
  <div>
   <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
  </div>
-          <p class="footer-address">Stay Rare ,Kochi , Kerala  India , 673641</p>
+          <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
+Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
           <p class="m-0">
            <a style="color: white;" href="mailto:stayrareinfo@gmail.com">✉️ <strong class="fw-medium">stayrareinfo@gmail.com</strong></a>
           </p>
