--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -15531,7 +15531,7 @@ textarea.form-control.is-invalid {
 .gradient-text {
   background: linear-gradient(135deg, #3B1E58 0%, #3B1D58 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; /* important for Safari/iOS */
+  -webkit-text-fill-color: transparent;
   background-clip: text;
   color: transparent;
   font-weight: bold;
