--- a/backend/views/user/contact.ejs
+++ b/backend/views/user/contact.ejs
@@ -478,7 +478,8 @@
                         </svg>
                     </div>
                     <h3 class="contact-label-text">Address</h3>
-                    <p class="contact-value-info">Stay Rare, Kochi, Kerala, India</p>
+                    <p class="contact-value-info">TC 56/2042 , Manchadi, Anthivilakku, <br>
+Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
                 </div>
 
                 <!-- Working Hours Card -->
@@ -521,7 +522,8 @@
  <div>
   <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
  </div>
-          <p class="footer-address">Stay Rare ,Kochi , Kerala  India , 673641</p>
+          <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
+Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
           <p class="m-0">
            <a style="color: white;" href="mailto:stayrareinfo@gmail.com">✉️ <strong class="fw-medium">stayrareinfo@gmail.com</strong></a>
           </p>
