--- a/backend/views/user/invoice.ejs
+++ b/backend/views/user/invoice.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/images/logo-2.png">
+  <link rel="icon" type="image/png" href="/images/stayrare/logo.png">
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -92,12 +92,11 @@
   <div class="invoice-box">
 
     <div class="top-section">
-      <img src="https://res.cloudinary.com/djnlfqkd7/image/upload/v1749749849/logo_l9fenr.png" alt="Hofmaan Logo" class="company-logo" />
+      <img src="https://drive.google.com/file/d/1fMjtx-sjEBYsnI3aNEXcprj-CzYrpol-/view?usp=drive_link" alt="Hofmaan Logo" class="company-logo" />
       <div class="company-details">
-        <h2>HOFMAAN</h2>
-        <p>www.hofmaan.com</p>
-        <p>support@hofmaan.com</p>
-        <p>GST No: 32ABCDE1234F1Z5</p>
+        <h2>STAYRARE</h2>
+        <p>www.stayrare.in</p>
+        <p>stayrareofficial@gmail.com</p>
       </div>
     </div>
 
@@ -152,7 +151,7 @@
 
     <div class="footer">
       This is a computer-generated invoice. No signature required.<br>
-      Thank you for shopping with <strong>Hofmaan</strong>!
+      Thank you for shopping with <strong>Stay Rare</strong>!
     </div>
 
   </div>
